<resources>
    <string name="app_name">The League Coding Test</string>
    <string name="workoutCodeHint">Enter code</string>
    <string name="startInstructions">Please select a workout</string>
    <string name="clear">Clear</string>
    <string name="resume">Resume</string>
    <string name="newWorkout">New</string>
    <string name="edit">Edit</string>
    <string name="workoutCount">Workout %1$d/%2$d</string>
    <string name="completeCount">Set %1$d/%2$d</string>
    <string name="repeatCount">Repetition %1$d/%2$d</string>
    <string name="holdCount">%1$d/%2$d Seconds</string>
    <string name="noWorkoutFoundError">Unable to retrieve workout. Please try a different code.</string>
    <string name="pleaseTryAgainError">Please try again.</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="perform">Perform</string>
    <string name="complete">Complete</string>
    <string name="repeat">Repeat</string>
    <string name="hold">Hold</string>
    <string name="exercise_complete_title">Exercise Complete!</string>
    <string name="exercise_complete_message">You\'ve completed this exercise. Make sure to save your progress and complete any other exercises in this workout.</string>
    <string name="workout_complete_title">Workout Complete!</string>
    <string name="workout_complete_message">You\'ve completed all exercises in the workout! Hit the back button to return to the home screen and start a new workout or restart this one.</string>
    <string name="restart">Restart</string>

    <string-array name="defaultCodes">
        <item>V27D758</item>
        <item>FE4528C</item>
        <item>TSXB3PH</item>
        <item>WATEULR</item>
        <item>NZ4UBUB</item>
    </string-array>

</resources>
