<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/activity_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jasontoradler.theleaguefitnessapp.MainActivity">

    <AutoCompleteTextView
        android:id="@+id/newWorkoutCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/box"
        android:hint="@string/workoutCodeHint"
        android:inputType="textAutoComplete"
        android:maxLines="1"
        android:padding="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

    <Button
        android:id="@+id/newWorkoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/newWorkoutCode"
        android:layout_alignTop="@id/newWorkoutCode"
        android:layout_toLeftOf="@id/newWorkoutCode"
        android:enabled="false"
        android:onClick="onNewWorkoutButtonClicked"
        android:padding="16dp"
        android:text="@string/newWorkout"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

    <Button
        android:id="@+id/clearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/newWorkoutButton"
        android:layout_alignTop="@id/newWorkoutButton"
        android:layout_toRightOf="@id/newWorkoutCode"
        android:enabled="false"
        android:onClick="onClear"
        android:text="@string/clear"/>

    <Button
        android:id="@+id/resumeWorkoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/newWorkoutButton"
        android:layout_alignRight="@id/newWorkoutButton"
        android:layout_below="@id/newWorkoutButton"
        android:layout_marginTop="16dp"
        android:enabled="false"
        android:onClick="onResumeWorkoutClicked"
        android:padding="16dp"
        android:text="@string/resume"
        android:visibility="gone"/>

    <Button
        android:id="@+id/restartWorkoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/clearButton"
        android:layout_alignRight="@id/clearButton"
        android:layout_below="@id/clearButton"
        android:layout_marginTop="16dp"
        android:enabled="false"
        android:onClick="onRestartWorkoutClicked"
        android:padding="16dp"
        android:text="@string/restart"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/resumeWorkoutCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/resumeWorkoutButton"
        android:layout_alignLeft="@id/newWorkoutCode"
        android:layout_alignRight="@id/newWorkoutCode"
        android:layout_alignTop="@id/resumeWorkoutButton"
        android:layout_below="@id/newWorkoutCode"
        android:layout_toRightOf="@id/resumeWorkoutButton"
        android:background="@drawable/box"
        android:enabled="false"
        android:gravity="center"
        android:padding="16dp"
        android:text="V27D758"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:visibility="gone"/>

    <ProgressBar
        android:id="@+id/loadingProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/resumeWorkoutCode"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:indeterminate="true"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/startInstructionsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/newWorkoutButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:text="@string/startInstructions"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

</RelativeLayout>
