<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                android:id="@+id/performCountLayout"
                layout="@layout/exercise_details_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"/>

            <include
                android:id="@+id/completeCountLayout"
                layout="@layout/exercise_details_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"/>

            <include
                android:id="@+id/repetitionsLayout"
                layout="@layout/exercise_details_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"/>

            <RelativeLayout
                android:id="@+id/holdLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/box">

                <ImageButton
                    android:id="@+id/holdProgressButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:src="@android:drawable/ic_media_play"/>

                <ProgressBar
                    android:id="@+id/holdProgressBar"
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/holdProgressButton"
                    android:layout_alignTop="@id/holdProgressButton"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="4dp"
                    android:layout_toRightOf="@id/holdProgressButton"
                    android:paddingBottom="4dp"
                    android:paddingTop="4dp"/>

                <TextView
                    android:id="@+id/timeLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/holdProgressBar"
                    android:layout_alignRight="@id/holdProgressBar"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp">

        <Button
            android:id="@+id/editExerciseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:text="@string/edit"/>

        <Button
            android:id="@+id/resetExerciseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/reset"/>

        <Button
            android:id="@+id/saveExerciseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/save"/>
    </LinearLayout>
</RelativeLayout>
